--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+
+ */
+
+
+
+
+.shopcontainer{
+  width:300px;
+  height:200px;
+}
+.product-image{
+  width:20%;
+  
+  
+
+}
+
+
+/* card start */
+.card-image{
+  background-size: cover;
+  background-image: url(../public/logo192.png);
+}
+
+/* card end */
