--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
 }
 
 .faAngleRight{
-  color: green;
+  color: white;
   transform: scale(5);
   position: absolute;
   top:50%;
@@ -74,7 +74,7 @@
  
 }
 .faAngleLeft{
-  color: green;
+  color: white;
   transform: scale(5);
   position: absolute;
   top:50%;
